force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c.object-meta.xml
<CustomObject>
    <description>Information to whom a deployment package should be distributed</description>
    <label>Deployment Package Assignment</label>
    <nameField>
        <displayFormat>SMADPA-{000000}</displayFormat>
        <label>Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Package Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>