force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/fields/cgc_sync__Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Assignment_Type__c</fullName>
    <description>Information to whom the Deployment Mobility Package is assigned to (e.g. All, User)</description>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgc_sync__Deployment_Package_Assignment</valueSetName>
    </valueSet>
</CustomField>