force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/fields/cgc_sync__Installation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Installation_Deadline__c</fullName>
    <description>Date until deployment package must be installed on the device.</description>
    <label>Installation Deadline</label>
    <type>DateTime</type>
</CustomField>