force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/fields/cgc_sync__Publishing_Date__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Publishing_Date__c</fullName>
    <description>Date from which the Deployment Mobility Package will be available for download</description>
    <label>Publishing Date</label>
    <type>DateTime</type>
</CustomField>