force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/fields/cgc_sync__State__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__State__c</fullName>
    <description>State of the deployment package.</description>
    <formula>If( cgc_sync__Sync_Mobile_App_Depl_Pkg__r.cgc_sync__Revoked__c, &quot;Revoked&quot;, If(cgc_sync__Publishing_Date__c &gt; NOW() , &quot;Scheduled&quot;,&quot;Published&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>