force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/fields/cgc_sync__Sync_Mobile_App_Depl_Pkg__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Mobile_App_Depl_Pkg__c</fullName>
    <description>Deployment Package to which the assignment belongs</description>
    <label>Deployment Package</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Deployment Package is revoked and no longer editable.</errorMessage>
        <filterItems>
            <field>cgc_sync__Sync_Mobile_App_Depl_Pkg__c.cgc_sync__Revoked__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgc_sync__Sync_Mobile_App_Depl_Pkg__c</referenceTo>
    <relationshipLabel>Deployment Package Assignment</relationshipLabel>
    <relationshipName>Sync_Mobile_App_Depl_Pkg_As</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>