force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/fields/cgc_sync__User__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to whom Deployment Mobility Package is assigned to</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployment_Package_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>