force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/recordTypes/cgc_sync__Assignment_to_All.recordType-meta.xml
<RecordType>
    <fullName>cgc_sync__Assignment_to_All</fullName>
    <active>true</active>
    <label>Assignment to All</label>
</RecordType>