force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/recordTypes/cgc_sync__Assignment_to_User_not_editable.recordType-meta.xml
<RecordType>
    <fullName>cgc_sync__Assignment_to_User_not_editable</fullName>
    <active>true</active>
    <description>Record Type to display non editable assignment to User</description>
    <label>Assignment to User not editable</label>
</RecordType>