force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/validationRules/cgc_sync__PreventAddingNewAssignment.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__PreventAddingNewAssignment</fullName>
    <active>true</active>
    <description>If Deployment Mobility Package is revoked, no new assignments can be added</description>
    <errorConditionFormula>ISNEW() &amp;&amp; cgc_sync__Sync_Mobile_App_Depl_Pkg__r.cgc_sync__Revoked__c</errorConditionFormula>
    <errorMessage>Adding new  Deployment Mobility Package Assignment denied.
Deployment Mobility Package is revoked. 
New Deployment Mobility Package Assignments are not allowed.</errorMessage>
</ValidationRule>