force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/validationRules/cgc_sync__PreventUndefinedPublishingDate.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__PreventUndefinedPublishingDate</fullName>
    <active>true</active>
    <description>Ensure that Publishing Date is defined</description>
    <errorConditionFormula>ISNULL(cgc_sync__Publishing_Date__c)</errorConditionFormula>
    <errorMessage>Publishing Date must be defined.</errorMessage>
</ValidationRule>