force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/validationRules/cgc_sync__PreventUserUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__PreventUserUpdate</fullName>
    <active>true</active>
    <description>Prevent changing the User for an existing User assignment</description>
    <errorConditionFormula>TEXT(cgc_sync__Assignment_Type__c) = &apos;User&apos; &amp;&amp; ISCHANGED(cgc_sync__User__c)</errorConditionFormula>
    <errorMessage>Changing the User is not allowed. Please clone the assignment to assign a different User.</errorMessage>
</ValidationRule>