force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c/validationRules/cgc_sync__ValidatePublishingDate.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__ValidatePublishingDate</fullName>
    <active>true</active>
    <description>Publishing Date must not be greater than Installation Deadline</description>
    <errorConditionFormula>cgc_sync__Publishing_Date__c &gt;  cgc_sync__Installation_Deadline__c</errorConditionFormula>
    <errorMessage>The Installation Deadline must be greater than the Publishing Date.</errorMessage>
</ValidationRule>